Article.html responsive changes

--- a/article.html
+++ b/article.html
@@ -98,13 +98,11 @@
     </div>
 
     <!-- Feature Image -->
-    <div class="article-feat-container">
-        <div class="col">
+    <div class="container">
             <img src="img/article-1.jpg" alt="" class="img-fluid">
             <p class="caption mb-1">Groundwater irrigation enables farmers to grow lush crops in California’s Central Valley, but the underground water resource is dwindling. A NASA study offers a new tool for managing groundwater.
                 <br><strong>Credits: California Department of Water Resources/Dale Kolke</strong>
             </p>
-        </div>
     </div>
 
     <!-- Article Body -->
@@ -120,12 +118,12 @@
                 <!-- Embeded Image -->
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <img src="img/article-2.jpg" alt="" class="img-fluid">
                         <p class="caption mb-1">This map shows changes in the mass of water, both above ground and underground, in California from 2003 to 2013, as measured by NASA’s GRACE satellite. The darkest red indicates the greatest water loss. The Central Valley is outlined in yellow; the Tulare Basin covers about the southern third. Extreme groundwater depletion has continued to the present.</p>
                         <p class="caption"><strong>Credits: NASA/GSFC/SVS</strong></p>
                     </div>
-                    <div class="col-8">
+                    <div class="col-lg-8">
                         <p>A research team from NASA’s Jet Propulsion Laboratory in Southern California and the U.S. Department of Energy’s Lawrence Berkeley Laboratory in Northern California set out to create a method that would do exactly that. They attacked the problem by combining data on water loss from U.S.-European <a href="https://www.jpl.nasa.gov/missions/gravity-recovery-and-climate-experiment-grace">Gravity Recovery and Climate Experiment</a> (GRACE) and <a href="https://www.jpl.nasa.gov/missions/gravity-recovery-and-climate-experiment-follow-on-grace-fo">GRACE Follow-On</a> satellites with data on ground-level changes from a ESA (European Space Agency) Sentinel-1 satellite. Ground-level changes in this region are often related to water loss because when ground is drained of water, it eventually slumps together and sinks into the spaces where water used to be – a process called subsidence.</p>
                         <p>The Tulare Basin is subsiding drastically: The current rate is about one foot (0.3 meters) of sinkage per year. But from one month to the next, the ground may drop, rise or stay the same. What’s more, these changes don’t always line up with expected causes. For example, after a heavy rainfall, the water table rises. It seems obvious that this would cause the ground level to rise, too, but it sometimes sinks instead.</p>
                         <p>The researchers thought these mysterious short-term variations might hold the key to determining the sources of pumped water. “The main question was, how do we interpret the change that’s happening on these shorter time scales: Is it just a blip, or is it important?” said Kyra Kim, a postdoctoral fellow at JPL and coauthor of the <a href="https://www.nature.com/articles/s41598-022-07650-1">paper</a>, which appeared in Scientific Reports.</p>
