Col & Border changes

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -100,8 +100,8 @@
         <div class="row px-2 mt-3 mb-5">
             <div class="col-lg-9">
                 <h1 class="mb-4">Image of The Day</h1>
-                <a href="https://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn">
-                    <img src="/img/IOTD.jpg" alt="" class="img-fluid">
+                <a href="https://www.nasa.gov/image-feature/cold-as-dry-ice">
+                <img src="/img/IOTD.jpg" alt="" class="img-fluid">
                 </a>
             </div>
             <div class="col-lg-3 pb-5">
@@ -120,22 +120,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 ">
-                        <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
-                            <div class="uni-header">
-                                <h2>NASA News</h2>
-                            </div>
+                        <a href="https://www.flickr.com/photos/nasahqphoto/" class="card">
+                                <h2 class="mb-3">NASA on Flickr</h2>
                             <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
                         </a>
                             <div class="card-body">
                                 <p>Official NASA photographs from agency photographers chronicle what's making news across the agency.</p>
-                                <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
+                                <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.flickr.com/photos/nasahqphoto/'" type="button">View NASA Images</button>
                             </div>
                     </div>
                     <div class="col-lg-4">
                         <a href="http://images.nasa.gov/" class="card">
-                            <div class="uni-header">
-                                <h2>NASA Image Library</h2>
-                            </div>
+                                <h2 class="mb-3">NASA Image Library</h2>
                             <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
                         </a>
                             <div class="card-body ">                            
@@ -145,9 +141,7 @@
                     </div>
                     <div class="col-lg-4">
                         <a href="https://www.nasa.gov/missions" class="card">
-                            <div class="uni-header">
-                                <h2>Mission Galleries</h2>
-                            </div>
+                                <h2 class="mb-3">Mission Galleries</h2>
                             <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
                         </a>
                         
