--- a/about.html
+++ b/about.html
@@ -154,39 +154,33 @@
     <div class="container pb-5">
         <!-- Listings -->
         <div class="row px-2 py-5">
-            <div class="col-lg-4 my-4">
-                <div class="uni-header">
-                    <h2>NASA Centers and Facilities</h2>
-                </div>
+            <div class="col-lg-4 mt-4">
+                    <h2 class="mb-3">NASA Centers and Facilities</h2>
                 <div class="uni-content">
-                    <img src="img/about-5.jpg" alt="" class="img-fluid ml-auto mr-auto" style="max-width: 300px">
+                    <img src="img/about-5.jpg" alt="" class="img-fluid" style="max-width: 95%">
                     <p>&nbsp;</p>
                 </div>
-                <div class="row pt-4 uni-footer">
+                <div class="row uni-footer">
                     <div class="col">
-                        <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">View Map</button>
+                        <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">View Map</button>
                         <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">Visit NASA</button>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 my-4">
-                <div class="uni-header">
-                    <h2>NASA and Small Businesses</h2>
-                </div>
+            <div class="col-lg-4 mt-4">
+                    <h2 class="mb-3">NASA and Small Businesses</h2>
                 <div class="uni-content">
                     <p>NASA is committed to providing all categories of small businesses an opportunity to participate in both NASA prime contracts and subcontracts. </p>
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col">
-                        <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://osbp.nasa.gov/index.html'" type="button">Programs</button>
+                        <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://osbp.nasa.gov/index.html'" type="button">Programs</button>
                         <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='mailto:truphelia.m.parker@nasa.gov'" type="button">Paperwork</button>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 my-4">
-                <div class="uni-header">
-                    <h2>Contact Us</h2>
-                </div>
+            <div class="col-lg-4 mt-4">
+                    <h2 class="mb-3">Contact Us</h2>
                 <div class="uni-content">
                     <p>Public Communications Office, NASA Headquarters</p>
                     <p>300 E. Street SW, Suite 5R30<br>Washington, DC 20546</p>
@@ -194,7 +188,7 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col-12">
-                        <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/submit-a-question-for-nasa'" type="button">Submit Question</button>
+                        <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/submit-a-question-for-nasa'" type="button">Submit Question</button>
                     </div>
                 </div>
             </div>
