Fix overflow-x with jumbotron

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -101,7 +101,7 @@
             <div class="col-lg-9">
                 <h1 class="mb-4">Image of The Day</h1>
                 <a href="https://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn">
-                    <img src="/img/IOTD.jpg" alt="" class="img-fluid">
+                    <img src="../img/IOTD.jpg" alt="" class="img-fluid">
                 </a>
             </div>
             <div class="col-lg-3 pb-5">
@@ -115,47 +115,45 @@
     </div>
 
      <!-- Featured Jumbotron -->
-     <div class="row mb-5">
-        <div class="jumbotron">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 ">
-                        <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
-                            <div class="uni-header">
-                                <h2>NASA News</h2>
-                            </div>
-                            <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
-                        </a>
-                            <div class="card-body">
-                                <p>Official NASA photographs from agency photographers chronicle what's making news across the agency.</p>
-                                <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
-                            </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <a href="http://images.nasa.gov/" class="card">
-                            <div class="uni-header">
-                                <h2>NASA Image Library</h2>
-                            </div>
-                            <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
-                        </a>
-                            <div class="card-body ">                            
-                                <p>NASA's image library, images.nasa.gov, consolidates imagery and videos in one searchable locations. </p>
-                                <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
-                            </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <a href="https://www.nasa.gov/missions" class="card">
-                            <div class="uni-header">
-                                <h2>Mission Galleries</h2>
-                            </div>
-                            <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
-                        </a>
-                        
-                            <div class="card-body">
-                                <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit the missions  <a href="https://www.nasa.gov/missions">A-Z page.</a></p>
-                                <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
-                            </div>
-                    </div>
+    <div class="jumbotron w-100 mb-5">
+        <div class="jumbotron-container">
+            <div class="row">
+                <div class="col-lg-4 ">
+                    <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
+                        <div>
+                            <h2>NASA News</h2>
+                        </div>
+                        <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
+                    </a>
+                        <div class="card-body">
+                            <p>Official NASA photographs from agency photographers chronicle what's making news across the agency.</p>
+                            <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
+                        </div>
+                </div>
+                <div class="col-lg-4">
+                    <a href="http://images.nasa.gov/" class="card">
+                        <div>
+                            <h2>NASA Image Library</h2>
+                        </div>
+                        <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
+                    </a>
+                        <div class="card-body ">                            
+                            <p>NASA's image library, images.nasa.gov, consolidates imagery and videos in one searchable locations. </p>
+                            <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
+                        </div>
+                </div>
+                <div class="col-lg-4">
+                    <a href="https://www.nasa.gov/missions" class="card">
+                        <div>
+                            <h2>Mission Galleries</h2>
+                        </div>
+                        <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
+                    </a>
+                    
+                        <div class="card-body">
+                            <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit the missions  <a href="https://www.nasa.gov/missions">A-Z page.</a></p>
+                            <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
+                        </div>
                 </div>
             </div>
         </div>
@@ -230,7 +228,7 @@
                 </div>
                 <div class="col-lg-8 row">                    
                     <ul class="social-links pt-2 center-on-mobile ml-lg-auto">
-                        <li class="text-center w-100">
+                        <li class="text-center">
                             <p>Follow NASA</p>
                         </li>
                         <br>
