--- a/Missions/artemis.html
+++ b/Missions/artemis.html
@@ -109,9 +109,8 @@
     </div>
 
     <!-- Featured Jumbotron -->
-    <div class="row">
-        <div class="jumbotron w-100">
-            <div class="container">
+        <div class="jumbotron px-2">
+            <div class="jumbotron-container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">Artemis-I Updates</h1>
@@ -152,7 +151,6 @@
                 </a>
             </div>
         </div>
-    </div>
 
     <div class="container pb-5">
 
@@ -161,7 +159,7 @@
             <div class="col-12">
                 <h1>Related Stories</h1>
             </div>
-            <div class="card-deck" id="related-feed"></div>
+            <div class="card-deck col" id="related-feed"></div>
         </div>
     </div>
 
