--- a/Missions/dart.html
+++ b/Missions/dart.html
@@ -110,9 +110,8 @@
     </div>
 
     <!-- Featured Jumbotron -->
-    <div class="row">
-        <div class="jumbotron w-100">
-            <div class="container">
+    <div class="jumbotron px-2">
+            <div class="jumbotron-container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">DART Updates</h1>
@@ -153,7 +152,6 @@
                 </a>
             </div>
         </div>
-    </div>
 
     <div class="container pb-5">
 
@@ -162,7 +160,7 @@
             <div class="col-12">
                 <h1>Related Stories</h1>
             </div>
-            <div class="card-deck" id="related-feed"></div>
+            <div class="card-deck col" id="related-feed"></div>
         </div>
     </div>
 
