--- a/Topics/earth.html
+++ b/Topics/earth.html
@@ -116,7 +116,7 @@
             <div class="col-12">
                 <h1>Related Stories</h1>
             </div>
-            <div class="card-deck" id="related-feed"></div>
+            <div class="card-deck col" id="related-feed"></div>
         </div>
     </div>
 
