--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -115,7 +115,7 @@
             <div class="col-12">
                 <h1>Related Stories</h1>
             </div>
-            <div class="card-deck" id="related-feed"></div>
+            <div class="card-deck col" id="related-feed"></div>
         </div>
     </div>
 
