Fix img sizes on tablet viewport

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -166,7 +166,7 @@
             <div class="col-lg-4">
                 <a href="https://apod.nasa.gov/apod/astropix.html" class="card">
                     <div class="captioned-img">
-                        <img src="../img/astronomy_POTD.jpg" alt="" class="img-fluid">
+                        <img src="../img/astronomy_POTD.jpg" alt="" class="img-fluid w-100">
                         <p class="img-caption py-2"><span>Astronomy Pic of the Day</span></p>
                     </div>
                 </a>
@@ -174,7 +174,7 @@
             <div class="col-lg-4">
                 <a href="https://www.flickr.com/photos/nasacommons/" class="card">
                     <div class="captioned-img">
-                        <img src="../img/historic_images.jpg" alt="" class="img-fluid">
+                        <img src="../img/historic_images.jpg" alt="" class="img-fluid w-100">
                         <p class="img-caption py-2"><span>Historic Images</span></p>
                     </div>
                 </a>
@@ -182,7 +182,7 @@
             <div class="col-lg-4">
                 <a href="https://earthobservatory.nasa.gov/images" class="card">
                     <div class="captioned-img">
-                        <img src="../img/earth_obv_images.jpg" alt="" class="img-fluid">
+                        <img src="../img/earth_obv_images.jpg" alt="" class="img-fluid w-100">
                         <p class="img-caption py-2"><span>Earth Observatory Images</span></p>
                     </div>
                 </a>
@@ -192,7 +192,7 @@
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/centers/armstrong/images/index.html" class="card">
                     <div class="captioned-img">
-                        <img src="../img/armstrong_aircraft_images.jpg" alt="" class="img-fluid">
+                        <img src="../img/armstrong_aircraft_images.jpg" alt="" class="img-fluid w-100">
                         <p class="img-caption py-2"><span>Armstrong Aircraft Images</span></p>
                     </div>
                 </a>
@@ -200,7 +200,7 @@
             <div class="col-lg-4">
                 <a href="https://www.jpl.nasa.gov/spaceimages/" class="card">
                     <div class="captioned-img">
-                        <img src="../img/space_images.jpg" alt="" class="img-fluid">
+                        <img src="../img/space_images.jpg" alt="" class="img-fluid w-100">
                         <p class="img-caption py-2"><span>Space Images</span></p>
                     </div>
                 </a>
@@ -208,7 +208,7 @@
             <div class="col-lg-4">
                 <a href="http://nasasearch.nasa.gov/search/images?affiliate=nasa&query=" class="card">
                     <div class="captioned-img">
-                        <img src="../img/search_images.jpg" alt="" class="img-fluid">
+                        <img src="../img/search_images.jpg" alt="" class="img-fluid w-100">
                         <p class="img-caption py-2"><span>Search Images</span></p>
                     </div>
                 </a>
