--- a/Topics/moon-to-mars.html
+++ b/Topics/moon-to-mars.html
@@ -77,7 +77,7 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-lg-auto center-on-mobile">
                     <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
