--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a class="nav-link mx-xl-3" href="about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-lg-auto center-on-mobile">
                     <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
@@ -104,12 +104,11 @@
                 <ul class="article-list-ver" id="latest-feed"></ul>
             </div>
         </div>
-        </div>
+    </div>
 
-        <!-- Featured Jumbotron -->
-        <!-- <div class="row mt-4">
-            <a href="Missions/commercial-crew.html" class="jumbotron w-100">
-                <div class="jumbotron-container">
+        <div class="jumbotron w-100">
+            <div class="jumbotron-container">
+                <a href="Missions/commercial-crew.html">
                     <div class="row">
                         <div class="col-lg-6">
                             <h1 class="jumbotron-title">Upcoming Launch</h1>
@@ -129,43 +128,19 @@
                             <p class="jumbotron-desc">Missions teams are targeting no earlier than April 21, 2022, for the launch of NASA’s SpaceX Crew-4 mission to the space station for a six-month science mission aboard the microgravity laboratory.</p>
                         </div>
                     </div>
-               </div>
-            </a>
-        </div> -->
-
-        <div class="jumbotron w-100">
-            <div class="jumbotron-container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h1 class="jumbotron-title">Upcoming Launch</h1>
-                    </div>
-                    <div class="col-lg-6">
-                        <p class="jumbotron-subtitle float-lg-right">View All Launches and Landings</p>
-                    </div>
-                </div>
-                <hr class="jumbotron-hr mt-0 mb-4">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <img class="article-img" src="img/home-7.png" alt="">
-                    </div>
-                    <div class="col-lg-9">
-                        <h2 class="mb-3 hover">NASA's SpaceX Crew-4 Mission to the International Space Station</h2>
-                        <h5 class="jumbotron-date mb-3">Date: No earlier than April 21, 2022</h5>
-                        <p class="jumbotron-desc">Missions teams are targeting no earlier than April 21, 2022, for the launch of NASA’s SpaceX Crew-4 mission to the space station for a six-month science mission aboard the microgravity laboratory.</p>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
 
         <!-- Article Feed -->
         <div class="container my-4 mb-5">
-        <div class="row px-3 py-5">
-            <div class="col-12 px-3">
-                <h1 class="mb-4">All Stories</h1>
+            <div class="row px-3 py-5">
+                <div class="col-12 px-3">
+                    <h1 class="mb-4">All Stories</h1>
+                </div>
+                <div class="card-deck col" id="related-feed"></div>
             </div>
-            <div class="card-deck col" id="related-feed"></div>
         </div>
-    </div>
     </div>
 
     <!-- Footer -->
